--- a/compute-class.yaml
+++ b/compute-class.yaml
@@ -8,67 +8,67 @@ spec:
   nodePoolAutoCreation:
     enabled: true
   priorities:
-  - machineFamily: t2d  # $0.46/day (spot, 4vCPU+16GB)
+  - machineFamily: t2d  # $0.46/day (spot, 4vCPU+16GB, cheapest)
     spot: true
-  - machineFamily: m3  # $0.53/day (spot, 4vCPU+16GB)
+  - machineFamily: m3  # $0.53/day (spot, 4vCPU+16GB, 1.1x)
     spot: true
-  - machineFamily: a3  # $0.65/day (spot, 4vCPU+16GB)
+  - machineFamily: a3  # $0.65/day (spot, 4vCPU+16GB, 1.4x)
     spot: true
-  - machineFamily: e2  # $0.78/day (spot, 4vCPU+16GB)
+  - machineFamily: e2  # $0.78/day (spot, 4vCPU+16GB, 1.7x)
     spot: true
-  - machineFamily: n2d  # $0.83/day (spot, 4vCPU+16GB)
+  - machineFamily: n2d  # $0.83/day (spot, 4vCPU+16GB, 1.8x)
     spot: true
-  - machineFamily: c2d  # $0.99/day (spot, 4vCPU+16GB)
+  - machineFamily: c2d  # $0.99/day (spot, 4vCPU+16GB, 2.1x)
     spot: true
-  - machineFamily: g2  # $0.99/day (spot, 4vCPU+16GB)
+  - machineFamily: g2  # $0.99/day (spot, 4vCPU+16GB, 2.1x)
     spot: true
-  - machineFamily: c3  # $1.13/day (spot, 4vCPU+16GB)
+  - machineFamily: c3  # $1.13/day (spot, 4vCPU+16GB, 2.5x)
     spot: true
-  - machineFamily: a2  # $1.19/day (spot, 4vCPU+16GB)
+  - machineFamily: a2  # $1.19/day (spot, 4vCPU+16GB, 2.6x)
     spot: true
-  - machineFamily: m4  # $1.43/day (spot, 4vCPU+16GB)
+  - machineFamily: m4  # $1.43/day (spot, 4vCPU+16GB, 3.1x)
     spot: true
-  - machineFamily: c3d  # $1.73/day (spot, 4vCPU+16GB)
+  - machineFamily: c3d  # $1.73/day (spot, 4vCPU+16GB, 3.8x)
     spot: true
-  - machineFamily: n2  # $1.73/day (spot, 4vCPU+16GB)
+  - machineFamily: n2  # $1.73/day (spot, 4vCPU+16GB, 3.8x)
     spot: true
-  - machineFamily: c4  # $2.03/day (spot, 4vCPU+16GB)
+  - machineFamily: c4  # $2.03/day (spot, 4vCPU+16GB, 4.4x)
     spot: true
-  - machineFamily: n1  # $2.03/day (spot, 4vCPU+16GB)
+  - machineFamily: n1  # $2.03/day (spot, 4vCPU+16GB, 4.4x)
     spot: true
-  - machineFamily: h3  # $2.48/day (spot, 4vCPU+16GB)
+  - machineFamily: h3  # $2.48/day (spot, 4vCPU+16GB, 5.4x)
     spot: true
-  - machineFamily: n2d  # $2.62/day (on-demand, 4vCPU+16GB)
+  - machineFamily: n2d  # $2.62/day (on-demand, 4vCPU+16GB, 5.7x)
     spot: false
-  - machineFamily: g2  # $2.72/day (on-demand, 4vCPU+16GB)
+  - machineFamily: g2  # $2.72/day (on-demand, 4vCPU+16GB, 5.9x)
     spot: false
-  - machineFamily: z3  # $2.74/day (spot, 4vCPU+16GB)
+  - machineFamily: z3  # $2.74/day (spot, 4vCPU+16GB, 5.9x)
     spot: true
-  - machineFamily: m4  # $2.95/day (on-demand, 4vCPU+16GB)
+  - machineFamily: m4  # $2.95/day (on-demand, 4vCPU+16GB, 6.4x)
     spot: false
-  - machineFamily: n2  # $3.02/day (on-demand, 4vCPU+16GB)
+  - machineFamily: n2  # $3.02/day (on-demand, 4vCPU+16GB, 6.5x)
     spot: false
-  - machineFamily: c3d  # $3.36/day (on-demand, 4vCPU+16GB)
+  - machineFamily: c3d  # $3.36/day (on-demand, 4vCPU+16GB, 7.3x)
     spot: false
-  - machineFamily: e2  # $3.54/day (on-demand, 4vCPU+16GB)
+  - machineFamily: e2  # $3.54/day (on-demand, 4vCPU+16GB, 7.7x)
     spot: false
-  - machineFamily: a3  # $3.63/day (on-demand, 4vCPU+16GB)
+  - machineFamily: a3  # $3.63/day (on-demand, 4vCPU+16GB, 7.9x)
     spot: false
-  - machineFamily: c3  # $3.73/day (on-demand, 4vCPU+16GB)
+  - machineFamily: c3  # $3.73/day (on-demand, 4vCPU+16GB, 8.1x)
     spot: false
-  - machineFamily: c4  # $3.73/day (on-demand, 4vCPU+16GB)
+  - machineFamily: c4  # $3.73/day (on-demand, 4vCPU+16GB, 8.1x)
     spot: false
-  - machineFamily: m3  # $4.08/day (on-demand, 4vCPU+16GB)
+  - machineFamily: m3  # $4.08/day (on-demand, 4vCPU+16GB, 8.8x)
     spot: false
-  - machineFamily: h3  # $4.14/day (on-demand, 4vCPU+16GB)
+  - machineFamily: h3  # $4.14/day (on-demand, 4vCPU+16GB, 9.0x)
     spot: false
-  - machineFamily: t2d  # $4.47/day (on-demand, 4vCPU+16GB)
+  - machineFamily: t2d  # $4.47/day (on-demand, 4vCPU+16GB, 9.7x)
     spot: false
-  - machineFamily: c2d  # $4.80/day (on-demand, 4vCPU+16GB)
+  - machineFamily: c2d  # $4.80/day (on-demand, 4vCPU+16GB, 10.4x)
     spot: false
-  - machineFamily: n1  # $5.13/day (on-demand, 4vCPU+16GB)
+  - machineFamily: n1  # $5.13/day (on-demand, 4vCPU+16GB, 11.1x)
     spot: false
-  - machineFamily: a2  # $5.13/day (on-demand, 4vCPU+16GB)
+  - machineFamily: a2  # $5.13/day (on-demand, 4vCPU+16GB, 11.1x)
     spot: false
-  - machineFamily: z3  # $8.06/day (on-demand, 4vCPU+16GB)
+  - machineFamily: z3  # $8.06/day (on-demand, 4vCPU+16GB, 17.5x)
     spot: false
